--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@ window.addEventListener('resize', handleResize);
     <section id="part1">
         <div id="intro">
             <h1>Welcome to the new era of finding your next <span class="orange-text">home sweet home!</span></h1>
-            <h4>Finding the ideal place to call home has never been easier. RentO is your one-stop solution for
+            <h4 >Finding the ideal place to call home has never been easier. RentO is your one-stop solution for
                 simplifying the apartment search and rental process.
             </h4>
             <br>
-            <h4>Whether you're a home seeker looking for your dream apartment or a homeowner aiming to effortlessly list
+            <h4 style="margin-bottom: 4rem;">Whether you're a home seeker looking for your dream apartment or a homeowner aiming to effortlessly list
                 your property, RentO has you covered!</h4>
 
             <button id="proposal">Download our business proposal</button>
